--- a/MobileCommERP/res/layout/activity_after_edit_save_data.xml
+++ b/MobileCommERP/res/layout/activity_after_edit_save_data.xml
@@ -24,7 +24,7 @@
             android:text="@string/project_cost_edit" />
 
         <LinearLayout
-            android:id="@+id/project_cost_edit_after_button"
+            android:id="@+id/submit_project_cost"
             style="@style/linear_submit_button" >
 
             <TextView
@@ -61,27 +61,13 @@
                 android:id="@+id/linear2"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:gravity="center_vertical|center_horizontal"
+                android:gravity="center_vertical|left"
                 android:text="@string/resource_desc"
                 android:textColor="#FFF"
                 android:textSize="12sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/linear3"
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="@string/projected_cost"
-                android:textColor="#FFF"
-                android:textSize="12sp" />
-        </LinearLayout>
+        
 
         <LinearLayout
             android:layout_width="0dp"
@@ -133,11 +119,6 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:background="#000000" />
-
     <ListView
         android:id="@+id/list_project_cost_after_edit"
         android:layout_width="fill_parent"
@@ -145,6 +126,11 @@
         android:layout_weight="0.8"
         android:visibility="visible" >
     </ListView>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#000000" />
 
     
 </LinearLayout>
